--- a/Web.Statu/Views/Home/Hledat.cshtml
+++ b/Web.Statu/Views/Home/Hledat.cshtml
@@ -345,7 +345,7 @@ else if (Model.HasResults == false)
         <div class="col-xs-12 col-sm-12">
 
             <h4><span title="@Model.Query" class="emphasized">@Devmasters.Core.TextUtil.ShortenText(Model.Query, 80, "...")</span> jsme nalezli ještě v těchto databázích</h4>
-            @foreach (var items in htmlLinks.Chunk(htmlLinks.Count / 3))
+            @foreach (var items in htmlLinks.Chunk((htmlLinks.Count / 3)+1))
             {
                 <div class="col-xs-6 col-sm-3">
                     <ul>
@@ -460,7 +460,7 @@ else if (Model.HasResults == false)
             {
                 <hr style="margin-top:30px;" />
                 <h3><span title="@Model.Query" class="emphasized">@Devmasters.Core.TextUtil.ShortenText(Model.Query, 80, "...")</span> jsme nalezli ještě v těchto databázích</h3>
-                foreach (var items in htmlLinks.Chunk(htmlLinks.Count / 3))
+                foreach (var items in htmlLinks.Chunk((htmlLinks.Count / 3)+1))
                 {
                     <div class="col-xs-6 col-sm-3">
                         <ul>
