--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -139,19 +139,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
                 </div>
                 <table>
                     <tr>
-                        <td style="width:150px;line-height:40px;text-align:right;"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_prima, true, showDecimal: RenderData.ShowDecimalVal.Show)) mld. Kč</span></td>
+                        <td style="width:150px;line-height:40px;text-align:right;white-space:nowrap"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_prima, true, showDecimal: RenderData.ShowDecimalVal.Show))&nbsp;mld.&nbsp;Kč</span></td>
                         <td style="padding-left:20px;">Přímá nevratná podpora (Pětadvacítka, ANTIVIRUS, Ošetřovné pro OSVČ apod.)</td>
                     </tr>
                     <tr>
-                        <td class="" style="width:auto;line-height:40px;text-align:right;"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_neprima, true, showDecimal: RenderData.ShowDecimalVal.Show)) mld. Kč</span></td>
+                        <td class="" style="width:auto;line-height:40px;text-align:right;white-space:nowrap"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_neprima, true, showDecimal: RenderData.ShowDecimalVal.Show))&nbsp;mld.&nbsp;Kč</span></td>
                         <td class="" style="padding-left:20px;">Nepřímá podpora (Snížení daní, liberační balíček)</td>
                     </tr>
                     <tr style="border-bottom:#ff525b 2px double ">
-                        <td class="" style="width:auto;line-height:40px;text-align:right;"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_zaruka, true, showDecimal: RenderData.ShowDecimalVal.Show)) mld. Kč</span></td>
+                        <td class="" style="width:auto;line-height:40px;text-align:right;white-space:nowrap"><span style="font-size:25px;font-weight:bold">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_zaruka, true, showDecimal: RenderData.ShowDecimalVal.Show))&nbsp;mld.&nbsp;Kč</span></td>
                         <td class="" style="padding-left:20px;">Úvěr či záruka za úvěr (ČMZRB COVID I-II-III-Praha, EGAP)</td>
                     </tr>
                     <tr>
-                        <td class="" style="width:auto;line-height:40px;"><span style="font-size:23px;font-weight:bold;color:#ff525b">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_prima + vypl_neprima + vypl_zaruka, true, showDecimal: RenderData.ShowDecimalVal.Show)) mld. Kč</span></td>
+                        <td class="" style="width:auto;line-height:40px;white-space:nowrap"><span style="font-size:23px;font-weight:bold;color:#ff525b">@Html.Raw(HlidacStatu.Util.RenderData.ShortNiceNumber(vypl_prima + vypl_neprima + vypl_zaruka, true, showDecimal: RenderData.ShowDecimalVal.Show)) mld. Kč</span></td>
                         <td class="" style="padding-left:20px;line-height:40px;"><span style="font-size:25px;font-weight:bold;color:#ff525b">skutečně vyplaceno</span></td>
                     </tr>
                 </table>
