--- a/Web.Statu/Views/Home/HledatFirmy.cshtml
+++ b/Web.Statu/Views/Home/HledatFirmy.cshtml
@@ -1,5 +1,9 @@
-﻿@model HlidacStatu.Lib.Data.Search.GeneralResult<string>
+﻿@model HlidacStatu.Lib.Data.Search.GeneralResult<HlidacStatu.Lib.Data.Firma>
 @using System.Linq;
+@using HlidacStatu.Web
+@using HlidacStatu.Lib
+@using Devmasters.Core
+@using HlidacStatu.Web.Framework;
 @{
     ViewBag.Title = "Hledání firem";
     ViewBag.ShowBookmarkUrl = true;
@@ -59,13 +63,61 @@
 
             @foreach (var item in Model.Result)
             {
-                var f = HlidacStatu.Lib.Data.Firmy.Get(item);
-                if (f.Valid)
+                if (item.Valid)
                 {
-                    @SearchResults.FirmyRow(this.User, f, false)
+                    @SearchResults.FirmyRow(this.User, item, false)
                 }
             }
         </tbody>
     </table>
 </div>
 
+
+<div class="text-center">
+    <ul class="pagination pagination-lg">
+        @{
+            string qid = Url.RequestContext.HttpContext.Request.QueryString["Page"] as string;
+            int page = 0;
+            string firstPageClass = "";
+            string lastPageClass = "";
+
+            if (!Devmasters.Core.TextUtil.IsNumeric(qid))
+            {
+                firstPageClass = "disabled";
+                page = 1;
+            }
+            else
+            {
+                page = HlidacStatu.Util.ParseTools.ToInt(qid) ?? 1;
+                if (page <= 1)
+                {
+                    page = 1;
+                }
+            }
+            if (page == 1)
+            {
+                firstPageClass = "disabled";
+            }
+            if (Model.Total < page * Model.PageSize
+                || page * Model.PageSize >= HlidacStatu.Lib.Searching.Tools.MaxResultWindow
+                )
+            {
+                lastPageClass = "disabled";
+            }
+
+        }
+        @if (string.IsNullOrEmpty(firstPageClass)) //jde jit na predchozi stranku, neni to "disabled"
+        {
+            <li class="@firstPageClass">
+                @Html.CurrentLink("« Předchozí", "HledatFirmy", "Home", Model.ToRouteValues(page - 1), null, new string[] { "nameOfView" })
+            </li>
+        }
+        @if (string.IsNullOrEmpty(lastPageClass)) //jde jit na dalsi stranku, neni to "disabled"
+        {
+            <li class="@lastPageClass">
+                @Html.CurrentLink("Následující »", "HledatFirmy", "Home", Model.ToRouteValues(page + 1), null, new string[] { "nameOfView", "routeData" })
+            </li>
+        }
+
+    </ul>
+</div>
