--- a/Web.Statu/Views/Manage/CreatePerson.cshtml
+++ b/Web.Statu/Views/Manage/CreatePerson.cshtml
@@ -90,6 +90,6 @@
     @Html.ActionLink("Zpět na vyhledávání", "FindPerson")
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
