--- a/Web.Statu/Views/Manage/EditPersonNP.cshtml
+++ b/Web.Statu/Views/Manage/EditPersonNP.cshtml
@@ -95,6 +95,6 @@
     @Html.ActionLink("Detail osoby", "PersonDetail", new { id = Model.InternalId })
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
