--- a/Web.Statu/Views/Manage/EditSmlouva.cshtml
+++ b/Web.Statu/Views/Manage/EditSmlouva.cshtml
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
 <link rel="stylesheet" href="/content/jsoneditor.css" />
